<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.treewall.av.pizzaapp.presentation.welcome.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:paddingStart="@dimen/space_single"
        android:paddingEnd="@dimen/space_single">

        <ImageView
            android:id="@+id/welcome_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/welcome_space_logo_top"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pizza_main" />


        <TextView
            android:id="@+id/welcome_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_description"
            android:textColor="@color/color_white"
            android:textSize="@dimen/welcome_description_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/welcome_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/welcome_to_login"
            style="@style/WelcomeButtonStyle"
            android:layout_marginTop="@dimen/welcome_login_btn_top_margin"
            android:background="@drawable/welcome_btn_bg_white"
            android:onClick="@{() -> viewModel.loginClick()}"
            android:text="@string/welcome_to_login"
            android:textColor="@color/red_welcom_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_logo" />

        <TextView
            android:id="@+id/welcome_to_sign_up"
            style="@style/WelcomeButtonStyle"
            android:layout_marginTop="@dimen/welcome_signup_btn_top_margin"
            android:background="@drawable/welcome_btn_bg_stroke_white"
            android:onClick="@{() -> viewModel.registerClick()}"
            android:text="@string/welcome_to_sign_up"
            android:textAllCaps="true"
            android:textColor="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_to_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>